--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -6,9 +6,7 @@
     tabindex="-1"
     aria-labelledby="quickViewModalLabel"
     aria-hidden="true"
-  >
-   
-  </div>
+  ></div>
 
   <div class="mobile-header-active mobile-header-wrapper-style">
     <div class="mobile-header-wrapper-inner">
@@ -102,15 +100,11 @@
                 <span class="menu-expand"></span><a href="#">Orders</a>
               </li>
               <li class="menu-item-has-children">
-                <span class="menu-expand"></span
-                ><a href="#">About</a>
+                <span class="menu-expand"></span><a href="#">About</a>
               </li>
               <li class="menu-item-has-children">
-                <span class="menu-expand"></span
-                ><a href="#">Contact</a>
+                <span class="menu-expand"></span><a href="#">Contact</a>
               </li>
-
-              
             </ul>
           </nav>
           <!-- mobile menu end -->
@@ -148,38 +142,63 @@
     </div>
   </div>
   <main class="main">
-   <!-- banner -->
+    <!-- banner -->
 
-   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="/assets/imgs/banner/slide-01.jpg" alt="First slide">
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleIndicators"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100"
+            src="/assets/imgs/banner/slide-01.jpg"
+            alt="First slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/assets/imgs/banner/slide-02.jpg"
+            alt="Second slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/assets/imgs/banner/slide-03.jpg"
+            alt="Third slide"
+          />
+        </div>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="/assets/imgs/banner/slide-02.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="/assets/imgs/banner/slide-03.jpg" alt="Third slide">
-      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      
-    </a>
-  </div>
 
-
-
-    
     <section class="product-tabs section-padding wow fadeIn animated">
       <div class="container">
         <div class="tab-header">
@@ -245,7 +264,7 @@
                   <div class="product-img-action-wrap">
                     <div class="product-img product-img-zoom">
                       <a href="shop-product-right.html">
-                       <!---- <img
+                        <!---- <img
                           class="default-img"
                           src="assets/imgs/shop/product-1-2.jpg"
                           alt=""
@@ -1982,7 +2001,7 @@
         <!--End tab-content-->
       </div>
     </section>
-  
+
     <section class="popular-categories section-padding mt-15">
       <div class="container wow fadeIn animated">
         <h3 class="section-title mb-20"><span>Popular</span> Categories</h3>
@@ -2102,7 +2121,7 @@
         </div>
       </div>
     </section> -->
-   
+
     <!-- <section class="deals section-padding">
       <div class="container">
         <div class="row">
@@ -2243,14 +2262,8 @@
         </div>
       </div>
     </section>
-
-
-
-
-    
-    
   </main>
- 
+
   <!-- Preloader Start -->
   <div id="preloader-active">
     <div class="preloader d-flex align-items-center justify-content-center">
