--- a/views/admin/add-category.ejs
+++ b/views/admin/add-category.ejs
@@ -3,11 +3,7 @@
     <div class="row w-75 mt-5">
       <div class="col-md-12">
         <h2 class="text-center">Add Category</h2>
-        <form
-          action="/admin/add-category"
-          method="POST"
-         
-        >
+        <form action="/admin/add-category" method="POST">
           <label for="">Category Name</label>
           <input type="text" name="category" class="form-control" />
           <button type="submit" class="btn btn-success mt-4">Submit</button>
@@ -31,7 +27,6 @@
               </tr>
             </thead>
             <tbody>
-
               <% viewCategory.forEach(function(viewCategory,index){ %>
 
               <tr>
@@ -39,13 +34,23 @@
 
                 <td><%= viewCategory.CategoryName %></td>
                 <td>
-                   <a href="/admin/edit-category/<%= viewCategory._id %>" class="btn btn-xs btn-success"> Edit</a> 
-                  
-                  <a href="/admin/delete-category/<%= viewCategory._id %>" class="btn btn-xs btn-danger" onclick="event.preventDefault(); deleteCategory('<%= viewCategory.categoryName %>', '<%= viewCategory._id %>')"> Delete</a>
+                  <a
+                    href="/admin/edit-category/<%= viewCategory._id %>"
+                    class="btn btn-xs btn-success"
+                  >
+                    Edit</a
+                  >
+
+                  <a
+                    href="/admin/delete-category/<%= viewCategory._id %>"
+                    class="btn btn-xs btn-danger"
+                    onclick="event.preventDefault(); deleteCategory('<%= viewCategory.categoryName %>', '<%= viewCategory._id %>')"
+                  >
+                    Delete</a
+                  >
                 </td>
               </tr>
               <% })%>
-
             </tbody>
           </table>
         </div>
@@ -55,46 +60,44 @@
   </div>
 </section>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css" rel="stylesheet" />
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css"
+  rel="stylesheet"
+/>
 <script>
-  function deleteAlert()
- {
-
-  swal({
-  title: "Are you sure?",
-  text: "Once deleted, you will not be able to recover this category!",
-  icon: "warning",
-  buttons: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("category  deleted sucessfully!", {
-      icon: "success",
+  function deleteAlert() {
+    swal({
+      title: "Are you sure?",
+      text: "Once deleted, you will not be able to recover this category!",
+      icon: "warning",
+      buttons: true,
+      dangerMode: true,
+    }).then((willDelete) => {
+      if (willDelete) {
+        swal("category  deleted sucessfully!", {
+          icon: "success",
+        });
+      } else {
+        swal("category not deleted !");
+      }
     });
-  } else {
-    swal("category not deleted !");
   }
-});
-  
-} 
 </script>
-
 
 <script>
   function deleteCategory(categoryName, categoryId) {
-      Swal.fire({
-          title: 'Are you sure?',
-          text: `Do you want to delete the category "${categoryName}"?`,
-          icon: 'warning',
-          showCancelButton: true,
-          confirmButtonColor: '#dc3545',
-          cancelButtonColor: '#6c757d',
-          confirmButtonText: 'Yes, delete it!'
-      }).then((result) => {
-          if (result.isConfirmed) {
-              window.location.href = `/admin/delete-category/${categoryId}`;
-          }
-      });
+    Swal.fire({
+      title: "Are you sure?",
+      text: `Do you want to delete the category "${categoryName}"?`,
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#dc3545",
+      cancelButtonColor: "#6c757d",
+      confirmButtonText: "Yes, delete it!",
+    }).then((result) => {
+      if (result.isConfirmed) {
+        window.location.href = `/admin/delete-category/${categoryId}`;
+      }
+    });
   }
-  </script>
+</script>
