--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -1,17 +1,25 @@
-
 <div class="container">
-    <div class="row">
-<div class="col-md-8">
-    <div class="tab-content dashboard-content">
-      <div class="tab-pane fade active show" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
-        <div class="card">
-          <div class="card-header">
-            <% if(user) { %>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="tab-content dashboard-content">
+        <div
+          class="tab-pane fade active show"
+          id="dashboard"
+          role="tabpanel"
+          aria-labelledby="dashboard-tab"
+        >
+          <div class="card">
+            <div class="card-header">
+              <% if(user) { %>
 
-              <h5 class="mb-0">Hello <%= user.username %>! </h5>
-            <% } else { %>
-              <h5 class="mb-0">Dear Customer! </h5>
-            <% } %>
-</div>
-</div>
+              <h5 class="mb-0">Hello <%= user.username %>!</h5>
+              <% } else { %>
+              <h5 class="mb-0">Dear Customer!</h5>
+              <% } %>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+  </div>
+</div>
