--- a/views/user/otplogin.ejs
+++ b/views/user/otplogin.ejs
@@ -2,52 +2,67 @@
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+        <div class="card bg-dark text-white" style="border-radius: 1rem">
           <div class="card-body pl-5 pr-5 text-center">
-
             <div class="mb-md-5 mt-md-4 pb-3">
-
               <h2 class="fw-bold mb-2 text-uppercase">Sign in</h2>
 
-              
-                <div id="sender">
-                  <p class="text-white-50 mb-5">Please enter your Mobile number to Sign in</p>
-                    <div class="form-outline form-white mb-4">
-                      <input type="text" id="mobile" class="form-control form-control-lg" />
-                      <label class="form-label" for="mobile">Mobile Number</label>
-                      <div id="recaptcha-container"></div>
-                    </div>
-                    <button class="mb-2 btn-primary btn-lg text-white-50" onclick="phoneAuth()">Send OTP</button>
-               <!----     <button type="submit" class="mb-2 btn-primary btn-lg text-white-50">Send OTP</button> -->
+              <div id="sender">
+                <p class="text-white-50 mb-5">
+                  Please enter your Mobile number to Sign in
+                </p>
+                <div class="form-outline form-white mb-4">
+                  <input
+                    type="text"
+                    id="mobile"
+                    class="form-control form-control-lg"
+                  />
+                  <label class="form-label" for="mobile">Mobile Number</label>
+                  <div id="recaptcha-container"></div>
                 </div>
+                <button
+                  class="mb-2 btn-primary btn-lg text-white-50"
+                  onclick="phoneAuth()"
+                >
+                  Send OTP
+                </button>
+                <!----     <button type="submit" class="mb-2 btn-primary btn-lg text-white-50">Send OTP</button> -->
+              </div>
 
-                 <label class="form-label" id="errorLoginPassword"></label> 
-              
-                <div id="verifier" style="display:none;">
-                  <div class="form-outline form-white mb-4">
-                    <input style="width:8rem;margin:0 auto;" id="OtpField" class="form-control form-control-lg" placeholder="Enter otp"/>
-                  </div>
+              <label class="form-label" id="errorLoginPassword"></label>
 
-                  
+              <div id="verifier" style="display: none">
+                <div class="form-outline form-white mb-4">
+                  <input
+                    style="width: 8rem; margin: 0 auto"
+                    id="OtpField"
+                    class="form-control form-control-lg"
+                    placeholder="Enter otp"
+                  />
                 </div>
-                  
-                  <form action="/sendOtp" method="POST" role="form" enctype="application/x-www-form-urlencoded">
+              </div>
 
-                    <input id="mobileNum" name="mobile" hidden>
-                    
+              <form
+                action="/sendOtp"
+                method="POST"
+                role="form"
+                enctype="application/x-www-form-urlencoded"
+              >
+                <input id="mobileNum" name="mobile" hidden />
 
-                    <div>
-                      <button class="btn btn-primary mb-2" onclick="codeverify()">Verify</button>
-                    </div>
-                    <!-- <div id="verified" style="display:none;margin-top:2rem"> Number Verified</div>
+                <div>
+                  <button class="btn btn-primary mb-2" onclick="codeverify()">
+                    Verify
+                  </button>
+                </div>
+                <!-- <div id="verified" style="display:none;margin-top:2rem"> Number Verified</div>
                     <div id="unVerified" style="display:none;margin-top:2rem"> Wrong otp</div>
 
                     <button class="btn btn-outline-light btn-lg m-auto" id="signInBtn" type="submit" style="display:none;">Sign in</button>
  -->
-                  </form>
-                
+              </form>
 
-         <!----     {{#if invalidUser}}
+              <!----     {{#if invalidUser}}
                   <label class="form-label mt-3" style="color:white">* Invalid User</label>
                 {{/if}}
 
@@ -56,9 +71,11 @@
                 {{/if}} --->
 
               <div>
-                <p class="mt-3">Don't have an account? <a href="/signup" class="text-white-50 fw-bold">Sign Up</a></p>
+                <p class="mt-3">
+                  Don't have an account?
+                  <a href="/signup" class="text-white-50 fw-bold">Sign Up</a>
+                </p>
               </div>
-
             </div>
           </div>
         </div>
